fix(elements): update control height and control contrast corrections
- Updated control height variables to use system-level interaction field height across various components.
- Fixed issue with incorrect interaction state computed colors due to bad inheritance
- Fixed issue when a control/interaction failed to have contrast due to no inherited background to compute from

--- a/projects/elements/src/button-group/button-group.css
+++ b/projects/elements/src/button-group/button-group.css
@@ -1,5 +1,5 @@
 :host {
-  --nve-sys-interaction-state-base: var(--background);
+  --nve-sys-interaction-state-base: var(--background, var(--nve-sys-layer-canvas-background));
   --background: var(--nve-sys-interaction-background);
   --border-radius: var(--nve-ref-border-radius-sm);
   --padding: var(--nve-ref-space-xxs);
